# velox-1

./: CMakeLists.txt  DEVELOPER_GUIDE.md  Makefile  build-debug.sh  build-extra-deps.sh  docker-compose.yml
scripts/: DataConvert.scala  Dockerfile  build-omnisci-debug.sh  omnisci-env.sh  setup-ubuntu.sh
velox/: CMakeLists.txt
velox/cider/: CMakeLists.txt  VeloxPlanToCiderExecutionUnit.cpp  VeloxPlanToCiderExecutionUnit.h  VeloxToCiderExpr.cpp  VeloxToCiderExpr.h
velox/connectors/hive/: CMakeLists.txt  HiveConnector.cpp
velox/core/: CMakeLists.txt  HybridPlanNode.cpp  HybridPlanNode.h
velox/dwio/: CMakeLists.txt
velox/dwio/common/: BitPackDecoder.cpp  BitPackDecoder.h  BitPackDecoderAVX512.h  CMakeLists.txt  bit-packing.h  bit-packing.inline.h  extend_16u.h  extend_32u.h  extend_8u.h  unpack_16u.h  unpack_32u.h  unpack_8u.h  unpack_def.h
velox/dwio/common/tests/: BitPackDecoderBenchmark.cpp  BitPackDecoderBenchmarknew.cpp  CMakeLists.txt
velox/dwio/dwrf/test/utils/: BatchMaker.cpp  BatchMaker.h
velox/exec/: CMakeLists.txt  HybridExecOperator.cpp  HybridExecOperator.h
velox/exec/tests/: CMakeLists.txt  CiderTest.cpp  HybridExecOperatorTest.cpp  HybridPlanPrototypeTest.cpp  PlanBuilder.cpp  PlanBuilder.h  QuerySimulationTest.cpp
velox/omnisci/: ArrowConvertorUtils.cpp  ArrowConvertorUtils.h  ArrowDataConvertor.cpp  ArrowDataConvertor.h  CMakeLists.txt  CiderNullValues.h  DataConvertor.cpp  DataConvertor.h  RawDataConvertor.cpp  RawDataConvertor.h
velox/omnisci/tests/: CMakeLists.txt  ResultConvertTest.cpp
(+2 files in other folders)
